change: init the height of punch card

--- a/app/src/main/res/layout/layout_punchcard.xml
+++ b/app/src/main/res/layout/layout_punchcard.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/punchRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginTop="15dp"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
