--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <PreferenceCategory android:title="@string/pref_category_appearance">
+
+        <EditTextPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_font_resize"
+            android:key="@string/pref_default_font_size"
+            android:singleLineTitle="true"
+            android:summary="@string/pref_default_font_size_summ"
+            android:title="@string/pref_default_font_size_title" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_category_privacy">
 
         <CheckBoxPreference
