--- a/app/src/main/res/values/constents.xml
+++ b/app/src/main/res/values/constents.xml
@@ -13,5 +13,6 @@
     <string name="pref_back_to_google_driver" translatable="false" >pref_back_to_google_driver</string>
     <string name="pref_restore_from_google_driver" translatable="false" >pref_restore_from_google_driver</string>
     <string name="pref_default_font_size">pref_default_font_size</string>
+    <string name="pref_default_editor_style">pref_default_editor_style</string>
 
 </resources>
