--- a/app/src/main/res/layout/item_style_selector.xml
+++ b/app/src/main/res/layout/item_style_selector.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="40dp"
     android:layout_height="40dp"
-    android:layout_marginStart="5dp">
-    <View
-        android:id="@+id/frameView"
+    android:layout_marginBottom="5dp"
+    android:layout_marginEnd="1dp"
+    android:layout_marginStart="5dp"
+    app:cardBackgroundColor="@color/font_selector_item_color"
+    app:cardCornerRadius="0dp">
+
+    <FrameLayout
+        android:id="@+id/bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_rect_frame"/>
-</FrameLayout>
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/frameView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_rect_frame" />
+    </FrameLayout>
+
+</android.support.v7.widget.CardView>
