--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:layout_marginTop">14dp</item>
         <item name="android:layout_marginBottom">10sp</item>
-        <item name="android:textColor">@color/paper_yellow</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
 </resources>
