--- a/app/src/main/res/layout/fragment_diary_list.xml
+++ b/app/src/main/res/layout/fragment_diary_list.xml
@@ -32,11 +32,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/diaryRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:reverseLayout="false" />
         </LinearLayout>
 
