--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/transparent">
 
-        <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/editToolsTab"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/diary_detail_edit_tool_height"
@@ -19,7 +19,7 @@
             android:background="@null"/>
     </FrameLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/toolArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/editor_tool_area_init_height"
