--- a/app/src/main/res/layout/recycler_view_item_category_end.xml
+++ b/app/src/main/res/layout/recycler_view_item_category_end.xml
@@ -9,7 +9,7 @@
     android:layout_marginStart="@dimen/diaries_list_recycle_view_margin_horizontal"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="7dp"
