--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -18,12 +18,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/list_navigation_menu_item"
+            android:id="@+id/navigation_menu_item_diary"
             android:icon="@drawable/ic_list"
             android:title="@string/list_title" />
 
         <item
-            android:id="@+id/statistics_navigation_menu_item"
+            android:id="@+id/navigation_menu_item_timer"
+            android:icon="@drawable/ic_timer_black_24dp"
+            android:title="@string/meter_counter" />
+
+        <item
+            android:id="@+id/navigation_menu_item_statistics"
             android:icon="@drawable/ic_statistics"
             android:title="@string/statistics_title" />
 
