--- a/app/src/main/res/layout/dialog_meter_counter_change_record.xml
+++ b/app/src/main/res/layout/dialog_meter_counter_change_record.xml
@@ -24,25 +24,24 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/nameHint"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_toEndOf="@+id/nameHint"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameHint"
-        tools:layout_editor_absoluteY="29dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/valueHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameHint"
-        android:layout_marginTop="32dp"
         android:layout_marginBottom="8dp"
         android:labelFor="@+id/meterCounterValue"
         android:text="@string/meter_counter_value"
-        app:layout_constraintBottom_toBottomOf="@+id/meterCounterUnit"
-        app:layout_constraintStart_toStartOf="@+id/unitHint"
-        app:layout_constraintTop_toBottomOf="@+id/unitHint" />
+        app:layout_constraintBottom_toBottomOf="@+id/meterCounterValue"
+        app:layout_constraintStart_toStartOf="@+id/nameHint" />
 
     <EditText
         android:id="@+id/meterCounterValue"
@@ -62,13 +61,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/valueHint"
-        android:layout_marginTop="32dp"
         android:layout_marginBottom="8dp"
         android:labelFor="@+id/meterCounterUnit"
         android:text="@string/meter_counter_unit"
-        app:layout_constraintBottom_toBottomOf="@+id/meterCounterValue"
-        app:layout_constraintStart_toStartOf="@+id/nameHint"
-        app:layout_constraintTop_toBottomOf="@+id/nameHint" />
+        app:layout_constraintBottom_toBottomOf="@+id/meterCounterUnit"
+        app:layout_constraintStart_toStartOf="@+id/valueHint" />
 
     <EditText
         android:id="@+id/meterCounterUnit"
