--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -22,11 +22,11 @@
     android:orientation="vertical"
     tools:context="com.empty.jinux.simplediary.ui.diarydetail.DiaryDetailActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,8 +48,8 @@
                     app:srcCompat="@drawable/ic_check_white_24dp" />
             </LinearLayout>
 
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
     <FrameLayout
