不使用 AndroidExtension， 使用 ViewBinding

--- a/app/src/main/res/layout/fragment_taskdetail.xml
+++ b/app/src/main/res/layout/fragment_taskdetail.xml
@@ -63,6 +63,7 @@
     </ScrollView>
 
     <include
+        android:id="@+id/editTool"
         layout="@layout/layout_diary_detail_edit_tool"
         android:visibility="visible" />
 
