--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -25,5 +25,5 @@
         android:layout_height="@dimen/editor_tool_area_init_height"
         android:layout_gravity="bottom"
         android:background="@null"
-        android:visibility="gone" />
+        android:visibility="visible" />
 </LinearLayout>
